force-app/main/default/objects/Shipment_Tracking__c/Shipment_Tracking__c.object-meta.xml
<CustomObject>
    <description>Información de seguimiento de envíos asociada a los pedidos de IT Solutions.</description>
    <label>Shipment Tracking</label>
    <nameField>
        <displayFormat>SHIP-{0000}</displayFormat>
        <label>Shipment Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>