force-app/main/default/objects/Shipment_Tracking__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Transportista encargado del envío.</description>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEUR</fullName>
            </value>
            <value>
                <fullName>MRW</fullName>
            </value>
            <value>
                <fullName>Correos</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>