force-app/main/default/objects/Shipment_Tracking__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <description>Fecha estimada de entrega proporcionada por la API del transportista.</description>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>