force-app/main/default/objects/Shipment_Tracking__c/fields/Last_API_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_API_Update__c</fullName>
    <description>Fecha y hora de la última consulta realizada a la API de tracking del transportista.</description>
    <label>Last API Update</label>
    <type>DateTime</type>
</CustomField>