force-app/main/default/objects/Shipment_Tracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Pedido asociado a este registro de seguimiento de envío.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipment Trackings</relationshipLabel>
    <relationshipName>Shipment_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>