force-app/main/default/objects/Shipment_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado actual del envío según la última consulta a la API de tracking.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En tránsito</fullName>
                <default>true</default>
                <label>En tránsito</label>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
            <value>
                <fullName>Pendiente de recogida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>