force-app/main/default/objects/Shipment_Tracking__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Número de seguimiento proporcionado por el transportista.</description>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>